--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ for the next letter.  Repeat this checking until the word is found or not able t
         $("#output").text(board)
         return
       }
-      console.log(board)
+      // console.log(board)
 
       $("#output").text("thinking....")
 
